@@ -4,6 +4,8 @@
       Chemistry::OpenSMILES::clean_chiral_centers().
     - Fixing a bug in position counting due to $1 pollution.
     - Detecting and reporting disconnected parts of moieties.
+    - Introducing Chemistry::OpenSMILES::is_chiral() to detect both chiral
+      atoms and moieties.
 
 0.4.6 2021-04-14
 
